Create a SexDAO and MySQLSexDAO to request associations from sexes to species